--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@ html,
 body {
   background-color: white;
   min-width: 400px;
+  min-height: 100vh;
   /*  height: 100vh;*/
-  max-height: 100vh;
   font-family: arial, sans-serif;
   box-sizing: border-box;
   padding: 0;
@@ -18,12 +18,13 @@ h2 {
   font-size: 20px;
 }
 
-div-body {
+.div-body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
-div-main {
+.div-main {
   flex-grow: 1;
   flex-shrink: 0;
 }
@@ -34,16 +35,19 @@ div-main {
   /*align-items: center;*/
   /*  justify-content: center;*/
   background-color: white;
-  height: 100%;
+  height: 137px;
   width: 100%;
   gap: 30px;
+}
+
+.div-footer {
 }
 
 header {
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #dadce0;
-  height: 137px;
+  height: 100%;
 }
 
 .headermain {
@@ -363,7 +367,6 @@ main {
   padding-top: 0px;
 }
 
-/*estas aqui */
 .resultlink {
   margin-top: 10px;
   margin-bottom: 0px;
@@ -383,8 +386,13 @@ main {
 }
 
 article > h2 {
-  margin-top: 0px;
+  margin-top: 5px;
   margin-bottom: 0px;
+}
+
+article {
+  margin-top: 33px;
+  margin-bottom: 33px;
 }
 
 h2 > a {
@@ -399,7 +407,40 @@ h2 + p {
   font-family: arial, sans-serif;
   font-weight: normal;
   line-height: 1.4em;
-  color: rgba(0, 0, 0, 0.65);
+  color: #4d5156;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.datearticle {
+  color: #70757a;
+}
+
+#id-alternatives {
+  border: solid 1px lightgrey;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+.alternatives {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+article > h4 {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: grey;
+}
+
+.alternatives ul {
+  padding-left: 0px;
+  margin-top: 0px;
+}
+
+.alternatives li {
+  list-style: none;
 }
 
 /* responsive */
