--- a/styles/style.css
+++ b/styles/style.css
@@ -587,6 +587,13 @@ h3 {
   color: black;
 }
 
+.searchandnext {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .searchpages {
   display: flex;
   flex-direction: column;
@@ -594,16 +601,6 @@ h3 {
   align-items: center;
   gap: 15px;
 }
-
-.searchpages ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* .searchpages li { */
-/*   width: 25px; */
-/* } */
 
 .letterO {
   width: 20px;
@@ -616,10 +613,15 @@ h3 {
   text-align: center;
   align-items: center;
   height: 20px;
+  margin-top: 0;
+  margin-bottom: 0px;
+  list-style: none;
+  padding-left: 0px;
+  margin-left: -10px;
 }
 
-.searchpagesli li {
-  width: 15px;
+.pagenumber {
+  width: 20px;
 }
 
 .searchpagesliletter {
@@ -629,6 +631,14 @@ h3 {
   text-align: center;
   align-items: center;
   height: 20px;
+  margin-bottom: 0px;
+  list-style: none;
+  padding-left: 0;
+}
+
+.searchpagesliletter ul {
+  margin: 0;
+  padding: 0;
 }
 
 .searchpagesli a {
@@ -640,27 +650,49 @@ h3 {
   text-decoration: none;
   color: #ffce44;
   font-weight: bolder;
-  font-size: 25px;
+  font-size: 27px;
 }
 
 .blueL {
   color: #2b7de9;
   font-weight: bolder;
-  font-size: 25px;
+  font-size: 27px;
 }
 .greenL {
   color: #1aa260;
   font-weight: bolder;
-  font-size: 25px;
+  font-size: 27px;
 }
 .redL {
   color: #de5246;
   font-weight: bolder;
-  font-size: 25px;
+  font-size: 27px;
 }
 
 .searchpagesli a:hover {
   text-decoration: underline;
+}
+
+#next {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 71px;
+  gap: 16px;
+  padding-top: 20px;
+  margin-left: 10px;
+}
+
+#next p {
+  margin: 0;
+  color: #2b7de9;
+  font-size: 14px;
+}
+
+#nextarrow {
+  font-size: 18px !important;
+  font-weight: bolder;
 }
 
 /* responsive */
