--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,7 @@ header {
 .rightheader {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 20px;
 }
 
@@ -128,16 +129,6 @@ header {
   -webkit-text-fill-color: transparent;
 }
 
-svg.sixdots {
-  width: 25px;
-  margin: 7px;
-  /*padding-top: 8px;
-  paddding-left: 5px;*/
-}
-svg.sixdots > path {
-  fill: #5f6368;
-}
-
 button#signin {
   width: 96px;
   background-color: #2b7de9;
@@ -168,6 +159,7 @@ header a:hover {
   width: 40px;
   outline: none;
   align-content: center;
+  text-decoration: none;
 }
 .moreoptions:hover {
   background-color: rgba(60, 64, 67, 0.08);
@@ -175,6 +167,25 @@ header a:hover {
   height: 40px;
   width: 40px;
   outline: none;
+}
+
+.moreoptions:hover {
+  text-decoration: none;
+}
+
+.dots {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  padding: 0;
+  color: #5f6368;
+  width: 25px;
+  margin: 11px 12px 11px 12px;
+}
+
+.dotscloser {
+  margin-top: -3px;
+  margin-bottom: -4px;
 }
 
 .searchbox {
@@ -395,7 +406,7 @@ main {
   margin-bottom: 0px;
 }
 .resultlink a {
-  color: rgba(0, 0, 0, 0.85);
+  color: #202124;
   text-decoration: none;
   font-size: 14px;
 }
@@ -702,8 +713,13 @@ h3 {
   .inputsearch {
     width: 70%;
   }
+  .nav {
+    width: 100%;
+    padding-left: 0;
+  }
   #info {
     justify-content: space-around;
+    margin-left: 0;
   }
   #infoleft {
     flex-direction: column;
@@ -720,8 +736,26 @@ h3 {
   #logo > img {
     height: 70px;
   }
+  .leftheader {
+    flex-direction: column;
+  }
+  #feedback {
+    left: 70%;
+  }
+  .anotherone {
+    max-height: 300px;
+  }
+
   body,
   html {
-    min-width: 100vw;
+    max-width: 100vw;
+  }
+  main {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .firstp {
+    margin-left: 0;
   }
 }
